--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,9 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Raleway:400,500,600,700,800&display=swap');
-
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Raleway:400,500,600,700,800&display=swap");
 
 body {
     margin: 0;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     color: #666;
@@ -15,7 +14,7 @@ body {
 ======================= */
 
 p {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     color: #858585;
     line-height: 24px;
     margin: 0;
@@ -53,7 +52,7 @@ img {
     vertical-align: middle;
 }
 
-.show>.btn-dark.dropdown-toggle:focus,
+.show > .btn-dark.dropdown-toggle:focus,
 .btn-dark.focus,
 .btn-dark:focus,
 .btn.focus,
@@ -71,7 +70,7 @@ button:focus {
 }
 
 .btn {
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
 }
 
 .btn-custom {
@@ -111,7 +110,7 @@ button:focus {
     left: 50%;
     z-index: -1;
     display: block;
-    content: '';
+    content: "";
     width: 0;
     height: 0;
     background: rgba(255, 255, 255, 0.3);
@@ -128,8 +127,8 @@ button:focus {
 }
 
 .btn-custom:hover::before {
-    -webkit-animation: circle .75s;
-    animation: circle .75s;
+    -webkit-animation: circle 0.75s;
+    animation: circle 0.75s;
     opacity: 1;
 }
 
@@ -170,7 +169,7 @@ button:focus {
     left: 50%;
     z-index: -1;
     display: block;
-    content: '';
+    content: "";
     width: 0;
     height: 0;
     background: rgba(255, 255, 255, 0.3);
@@ -183,8 +182,8 @@ button:focus {
 }
 
 .btn-custom-danger:hover::before {
-    -webkit-animation: circle .75s;
-    animation: circle .75s;
+    -webkit-animation: circle 0.75s;
+    animation: circle 0.75s;
     opacity: 1;
 }
 
@@ -265,7 +264,6 @@ button:focus {
     margin-bottom: 60px;
 }
 
-
 /* ======================
 	HEADINGS
 ======================= */
@@ -280,7 +278,7 @@ h6 {
     font-weight: 700;
     margin-top: 0;
     margin-bottom: 15px;
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
 }
 
 h1 {
@@ -316,11 +314,11 @@ h5 {
 h5 a,
 h6 a {
     color: inherit;
-    transition: all .3s ease;
-    -webkit-transition: all .3s ease;
-    -moz-transition: all .3s ease;
-    -ms-transition: all .3s ease;
-    -o-transition: all .3s ease;
+    transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
 }
 
 h5 a:hover {
@@ -373,7 +371,6 @@ h6 {
     margin-bottom: 10px;
     line-height: 1;
     padding-bottom: 20px;
-
 }
 
 .sec-title::after {
@@ -381,7 +378,7 @@ h6 {
     background-color: var(--primary-color);
     height: 1px;
     width: 80px;
-    content: '';
+    content: "";
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
@@ -394,7 +391,7 @@ h6 {
     width: 17px;
     color: var(--primary-color);
     font-family: fontAwesome;
-    content: '\f041';
+    content: "\f041";
     bottom: -8px;
     padding: 1.5px 0;
     text-align: center;
@@ -415,7 +412,6 @@ h6 {
     text-transform: uppercase;
     font-size: 14px;
 }
-
 
 /* Header */
 .head-top {
@@ -446,25 +442,26 @@ h6 {
     width: auto;
 }
 
-.location-dropdown{
+.location-dropdown {
     position: relative;
 }
 
-.tt-menu.tt-open{
+.tt-menu.tt-open {
     position: absolute;
     z-index: 3;
     display: none;
     background-color: #fff;
-    transition: all .3s ease;
-    -webkit-transition: all .3s ease;
-    -moz-transition: all .3s ease;
-    -ms-transition: all .3s ease;
-    -o-transition: all .3s ease;
+    transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
     width: 100%;
     box-shadow: 0 0 4px #ececec;
 }
 
-.tt-suggestion.tt-selectable, #noLocation {
+.tt-suggestion.tt-selectable,
+#noLocation {
     padding: 4px 15px;
 }
 
@@ -474,23 +471,23 @@ h6 {
 }
 
 /*.location-dropdown:hover .search-container{*/
-    /*display:block;*/
+/*display:block;*/
 /*}*/
 
 /*.search-names{*/
-    /*padding: 10px;*/
-    /*font-size: 14px;*/
-    /*text-transform: capitalize;*/
-    /*color: #222;    display: block;*/
-    /*width: 100%;*/
+/*padding: 10px;*/
+/*font-size: 14px;*/
+/*text-transform: capitalize;*/
+/*color: #222;    display: block;*/
+/*width: 100%;*/
 /*}*/
 
 input:focus {
-    outline: 0
+    outline: 0;
 }
 
 .input-wrap,
-.location-dropdown{
+.location-dropdown {
     position: relative;
     display: inline-block;
 }
@@ -504,7 +501,10 @@ input:focus {
     z-index: 1;
 }
 
-.input-wrap .select2-container .select2-selection--single .select2-selection__rendered {
+.input-wrap
+    .select2-container
+    .select2-selection--single
+    .select2-selection__rendered {
     padding-left: 30px;
 }
 
@@ -662,7 +662,6 @@ input:focus {
     text-transform: capitalize;
 }
 
-
 /* banner area */
 .carousel-inner img {
     width: 100%;
@@ -773,9 +772,9 @@ input:focus {
     -webkit-box-shadow: none;
     box-shadow: none;
     border-radius: 0;
-    -webkit-transition: all .3s ease;
-    -o-transition: all .3s ease;
-    transition: all .3s ease;
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
     background-color: #fff;
     color: #858585;
     font-weight: 400;
@@ -789,7 +788,7 @@ input:focus {
     font-size: 14px;
 }
 
-.form-control[name='email'] {
+.form-control[name="email"] {
     text-transform: lowercase;
 }
 
@@ -855,8 +854,8 @@ input:focus {
 }
 
 .ctg-item:hover {
-    -webkit-box-shadow: 0px 0px 40px 0px rgba(89, 89, 89, 0.10);
-    box-shadow: 0px 0px 40px 0px rgba(89, 89, 89, 0.10);
+    -webkit-box-shadow: 0px 0px 40px 0px rgba(89, 89, 89, 0.1);
+    box-shadow: 0px 0px 40px 0px rgba(89, 89, 89, 0.1);
     border-color: transparent;
 }
 
@@ -864,7 +863,6 @@ input:focus {
     color: #fff;
     font-weight: 500;
 }
-
 
 /* popular listing */
 
@@ -898,7 +896,7 @@ input:focus {
     padding: 20px;
 }
 
-.list-content p{
+.list-content p {
     font-size: 13px;
     min-height: 70px;
 }
@@ -915,7 +913,7 @@ input:focus {
     left: 50%;
     z-index: 1;
     display: block;
-    content: '';
+    content: "";
     width: 0;
     height: 0;
     background: rgba(255, 255, 255, 0.3);
@@ -936,7 +934,8 @@ input:focus {
     font-size: 14px;
 }
 
-.category-name, .time-remaining {
+.category-name,
+.time-remaining {
     position: absolute;
     background: rgba(255, 255, 255, 0.85);
     border-radius: 5px;
@@ -989,11 +988,11 @@ input:focus {
     display: block;
     border-radius: 0;
     transform: translateY(20px);
-    transition: all .3s ease;
-    -webkit-transition: all .3s ease;
-    -moz-transition: all .3s ease;
-    -ms-transition: all .3s ease;
-    -o-transition: all .3s ease;
+    transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
     -webkit-transform: translateY(20px);
     -moz-transform: translateY(20px);
     -ms-transform: translateY(20px);
@@ -1004,7 +1003,7 @@ input:focus {
     padding: 0;
     box-shadow: 0 0 4px #ececec;
 }
-.dropdown:hover>.dropdown-menu {
+.dropdown:hover > .dropdown-menu {
     opacity: 1;
     visibility: visible;
     transform: translateY(0px);
@@ -1024,7 +1023,7 @@ input:focus {
 }
 
 .dropdown-item:hover {
-    background-color: #f5f7fa
+    background-color: #f5f7fa;
 }
 
 .dropdown-item.active:hover {
@@ -1130,7 +1129,7 @@ input:focus {
 .quick-link a {
     position: relative;
     margin: 0 2rem;
-    color:#31639c;
+    color: #31639c;
     font-size: 20px;
     text-transform: capitalize;
     -webkit-transition: all 0.3s ease-in-out;
@@ -1148,7 +1147,7 @@ input:focus {
     background-color: #31639c;
     height: 2px;
     width: 40px;
-    content: '';
+    content: "";
     bottom: 0;
     left: 0;
 }
@@ -1263,8 +1262,8 @@ input:focus {
 }
 
 .datepicker table tr td span.new,
-.datepicker table tr td span{
-    color:#fff;
+.datepicker table tr td span {
+    color: #fff;
 }
 
 .datepicker table tr td span.disabled,
@@ -1273,11 +1272,12 @@ input:focus {
     opacity: 0.5;
 }
 
-.datepicker table tr td span:hover{
+.datepicker table tr td span:hover {
     background: rgba(255, 255, 255, 0.2);
 }
 
-.datepicker table tr td span:hover, .datepicker table tr td span.focused:hover{
+.datepicker table tr td span:hover,
+.datepicker table tr td span.focused:hover {
     background: rgba(255, 255, 255, 0.2);
 }
 
@@ -1285,8 +1285,8 @@ input:focus {
     background: transparent;
 }
 
-.datepicker table tr td span.active.active{
-    color:var(--primary-color);
+.datepicker table tr td span.active.active {
+    color: var(--primary-color);
     box-shadow: 0 0 20px 0px #0c315d;
     border-radius: 4px;
     background-color: #fff;
@@ -1382,7 +1382,7 @@ input:focus {
 
 .custom-control-indicator {
     position: absolute;
-    top: .25rem;
+    top: 0.25rem;
     left: 0;
     display: block;
     width: 1rem;
@@ -1414,7 +1414,7 @@ input:focus {
 
 .custom-radio .custom-control-indicator::after {
     border-radius: 30px;
-    content: '';
+    content: "";
     z-index: 99;
     position: absolute;
     width: 12px;
@@ -1442,8 +1442,8 @@ input:focus {
     padding-left: 8px;
 }
 
-.custom-control-input:checked~.custom-control-indicator::before,
-.custom-control-input:checked~.custom-control-indicator::after {
+.custom-control-input:checked ~ .custom-control-indicator::before,
+.custom-control-input:checked ~ .custom-control-indicator::after {
     background-color: #fff;
     transform: scale(1);
     -webkit-transform: scale(1);
@@ -1456,7 +1456,7 @@ input:focus {
     opacity: 0.4;
 }
 
-.custom-control-input:checked~.custom-control-indicator {
+.custom-control-input:checked ~ .custom-control-indicator {
     opacity: 1;
 }
 
@@ -1563,19 +1563,19 @@ input.qty {
     background-color: #eee;
     border: 1px solid #ccc;
 }
-.qty-elements:first-child{
+.qty-elements:first-child {
     border-radius: 6px 0 0 6px;
     -webkit-border-radius: 6px 0 0 6px;
     -moz-border-radius: 6px 0 0 6px;
     -ms-border-radius: 6px 0 0 6px;
     -o-border-radius: 6px 0 0 6px;
 }
-.qty-elements:last-child{
-    border-radius:0 6px 6px 0;
-    -webkit-border-radius:0 6px 6px 0;
-    -moz-border-radius:0 6px 6px 0;
-    -ms-border-radius:0 6px 6px 0;
-    -o-border-radius:0 6px 6px 0;
+.qty-elements:last-child {
+    border-radius: 0 6px 6px 0;
+    -webkit-border-radius: 0 6px 6px 0;
+    -moz-border-radius: 0 6px 6px 0;
+    -ms-border-radius: 0 6px 6px 0;
+    -o-border-radius: 0 6px 6px 0;
 }
 .qty-elements a {
     display: block;
@@ -1626,7 +1626,7 @@ input.qty {
 .final-cart li:last-child {
     margin-bottom: 0;
     padding-top: 15px;
-    border-top: 1px solid rgba(255, 255, 255, .3);
+    border-top: 1px solid rgba(255, 255, 255, 0.3);
     margin-top: 15px;
 }
 
@@ -1668,7 +1668,7 @@ input.qty {
     background-color: var(--primary-color);
     height: 2px;
     width: 40px;
-    content: '';
+    content: "";
     bottom: 0;
     left: 0;
 }
@@ -1678,7 +1678,7 @@ input.qty {
     font-weight: 600;
 }
 
-.form-group>span {
+.form-group > span {
     text-transform: capitalize;
     color: #222;
     font-size: 12px;
@@ -1713,13 +1713,14 @@ input.qty {
     flex-basis: 50%;
 }
 
-.booking-summary li span+span {
+.booking-summary li span + span {
     flex-basis: 50%;
     text-align: right;
     border-left: 1px solid #ccc;
 }
 
-.payment-box, .success-box {
+.payment-box,
+.success-box {
     max-width: 700px;
     margin: 0 auto;
     background-color: #fff;
@@ -1756,7 +1757,7 @@ input.qty {
 
 /* login-page */
 
-.login-body-wrapper{
+.login-body-wrapper {
     background-color: var(--primary-color);
     position: relative;
 }
@@ -1807,11 +1808,11 @@ input.qty {
 .login-body-wrapper::before {
     content: "";
     width: 70%;
-    height:110%;
+    height: 110%;
     position: absolute;
     background: rgba(255, 255, 255, 0.07);
     left: -20%;
-    top:-10%;
+    top: -10%;
     animation: morph 15s linear infinite alternate;
     z-index: 0;
     will-change: border-radius, transform;
@@ -1819,7 +1820,7 @@ input.qty {
     pointer-events: none;
     -webkit-animation: morph 15s linear infinite alternate;
 }
-.login-page::after{
+.login-page::after {
     content: "";
     position: absolute;
     background: rgba(255, 255, 255, 0.07);
@@ -1832,7 +1833,8 @@ input.qty {
     right: -10vmin;
     top: auto;
     bottom: 0;
-    animation: morph 10s linear infinite alternate, spin 26s linear infinite reverse;
+    animation: morph 10s linear infinite alternate,
+        spin 26s linear infinite reverse;
     transform-origin: 30% 30%;
 }
 @keyframes morph {
@@ -1845,16 +1847,16 @@ input.qty {
 }
 @keyframes spin {
     to {
-      transform: rotate(1turn);
-      -webkit-transform: rotate(1turn);
-      -moz-transform: rotate(1turn);
-      -ms-transform: rotate(1turn);
-      -o-transform: rotate(1turn);
+        transform: rotate(1turn);
+        -webkit-transform: rotate(1turn);
+        -moz-transform: rotate(1turn);
+        -ms-transform: rotate(1turn);
+        -o-transform: rotate(1turn);
     }
 }
-.login-box .input-group{
-   position: relative;
-   margin-bottom:30px;
+.login-box .input-group {
+    position: relative;
+    margin-bottom: 30px;
 }
 
 .input-group input {
@@ -1862,40 +1864,40 @@ input.qty {
     padding: 10px 20px;
 }
 
-.login-box .input-group label{
+.login-box .input-group label {
     position: absolute;
     top: 12px;
-    left:20px;
+    left: 20px;
     display: block;
     margin: 0;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
     white-space: nowrap;
-    z-index:4;
+    z-index: 4;
     text-transform: capitalize;
     color: #222;
     font-size: 13px;
-    -moz-transition: all .4s ease-in-out;
-    -ms-transition: all .4s ease-in-out;
-    -o-transition: all .4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -ms-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
 }
-.login-box .input-group input:valid~label,
-.login-box .input-group input:focus~label{
+.login-box .input-group input:valid ~ label,
+.login-box .input-group input:focus ~ label {
     top: -9px;
     background-color: #fff;
     padding: 0 5px;
 }
 .input-group i {
     position: absolute;
-    top:0;
+    top: 0;
     right: 0;
     width: 43px;
     background-color: #222;
     line-height: 42px;
-    z-index:5;
+    z-index: 5;
     color: #fff;
 }
-.input-group i::after{
+.input-group i::after {
     content: "";
     position: absolute;
     left: -12px;
@@ -1903,7 +1905,6 @@ input.qty {
     border: 6px solid transparent;
     border-right-color: #222;
 }
-
 
 /*======================
     Custom checkbox
@@ -1917,9 +1918,9 @@ input.qty {
 
 /* checkbox aspect */
 
-[type="checkbox"]:not(:checked)+label:before,
-[type="checkbox"]:checked+label:before {
-    content: '';
+[type="checkbox"]:not(:checked) + label:before,
+[type="checkbox"]:checked + label:before {
+    content: "";
     position: absolute;
     left: 0;
     top: 1.5px;
@@ -1932,9 +1933,9 @@ input.qty {
 
 /* checked mark aspect */
 
-[type="checkbox"]:not(:checked)+label:after,
-[type="checkbox"]:checked+label:after {
-    content: '\f00c';
+[type="checkbox"]:not(:checked) + label:after,
+[type="checkbox"]:checked + label:after {
+    content: "\f00c";
     position: absolute;
     background: var(--primary-color);
     font-size: 0.8em;
@@ -1944,12 +1945,12 @@ input.qty {
     padding-left: 0.5px;
     padding-top: 1.4px;
     text-align: center;
-    top:2px;
+    top: 2px;
     width: 15px;
     height: 15px;
     color: #ffffff;
     transition: all 0.4s ease;
-    font-family: 'FontAwesome';
+    font-family: "FontAwesome";
     -webkit-transition: all 0.4s ease;
     -moz-transition: all 0.4s ease;
     -ms-transition: all 0.4s ease;
@@ -1958,7 +1959,7 @@ input.qty {
 
 /* checked mark aspect changes */
 
-[type="checkbox"]:not(:checked)+label:after {
+[type="checkbox"]:not(:checked) + label:after {
     opacity: 0;
     transform: scale(1.2);
     -webkit-transform: scale(1.2);
@@ -1967,16 +1968,16 @@ input.qty {
     -o-transform: scale(1.2);
 }
 
-[type="checkbox"]:checked+label:after {
+[type="checkbox"]:checked + label:after {
     opacity: 1;
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
     transform: scale(1);
 }
 
-[type="checkbox"]+label,
-[type="checkbox"]:not(:checked)+label,
-[type="checkbox"]:checked+label {
+[type="checkbox"] + label,
+[type="checkbox"]:not(:checked) + label,
+[type="checkbox"]:checked + label {
     margin: 0;
     line-height: 1.3;
     padding-left: 1.6em;
@@ -1985,7 +1986,7 @@ input.qty {
     cursor: pointer;
     color: #222;
 }
-.login-box .btn{
+.login-box .btn {
     padding: 13px;
 }
 
@@ -1998,26 +1999,26 @@ input.qty {
     Service Details
 ========================*/
 
-.detail-image img{
+.detail-image img {
     max-width: 100%;
     border-radius: 10px;
 }
 .check-list li {
     margin-bottom: 10px;
 }
-.check-list li span{
+.check-list li span {
     position: relative;
 }
 .check-list li span:before {
     content: "\f00c";
-    font-family: 'FontAwesome';
+    font-family: "FontAwesome";
     color: #31639c;
     margin-right: 10px;
 }
-.service-detail .detail-info{
+.service-detail .detail-info {
     position: relative;
 }
-.service-detail h4{
+.service-detail h4 {
     position: relative;
     margin-bottom: 30px;
     padding-bottom: 15px;
@@ -2027,7 +2028,7 @@ input.qty {
     background-color: #31639c;
     height: 2px;
     width: 40px;
-    content: '';
+    content: "";
     bottom: 0;
     left: 0;
 }
@@ -2036,52 +2037,52 @@ input.qty {
     text-transform: capitalize;
 }
 
-.detail-info ul li span{
+.detail-info ul li span {
     display: block;
     text-align: center;
 }
 .detail-info ul li:last-child {
-    margin-bottom:0;
+    margin-bottom: 0;
 }
-.detail-info ul li span:first-child{
+.detail-info ul li span:first-child {
     color: #ffffff;
     font-weight: 600;
     background: #31639c;
-    padding:5px 15px;
+    padding: 5px 15px;
     border-radius: 5px 5px 0 0;
 }
-.detail-info ul li span:last-child{
+.detail-info ul li span:last-child {
     color: #232323;
     font-weight: 600;
-    padding:10px 15px;
+    padding: 10px 15px;
     border-radius: 0 0 5px 5px;
     border: 1px solid #ccc;
     border-top: 0;
 }
-.add-qty{
+.add-qty {
     background-color: #fff;
     border-radius: 5px;
     padding: 10px;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.10);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
-.add-qty li{
+.add-qty li {
     padding: 10px;
 }
 .add-qty li span {
     color: #232323;
     font-weight: 600;
 }
-.service-detail .add-qty li .btn{
+.service-detail .add-qty li .btn {
     width: 100%;
     padding: 13px;
 }
-.service-detail .add-qty .qty-elements{
-    width:25%;
+.service-detail .add-qty .qty-elements {
+    width: 25%;
 }
-.service-detail .add-qty .qty-wrap input{
+.service-detail .add-qty .qty-wrap input {
     width: 50%;
 }
-.service-detail .add-qty .qty-elements a{
+.service-detail .add-qty .qty-elements a {
     width: auto;
 }
 
