--- a/public/assets/css/stanjo.css
+++ b/public/assets/css/stanjo.css
@@ -1,8 +1,8 @@
 /*================================================
 * Stanjo
 * Version: 1.3
-* Author Name: Onesmas Bosire
-* Author URI: onesmas.co.ke
+* Author Name: Nisc Cloud
+* Author URI: nisccloud.com
 ===================================================
 
 1. GLOBAL STYLES
